# confclasses

./: .gitignore  README.md  confclasses.py  confclasses_comments.py  pyproject.toml  setup.py
src/: confclasses.py  confclasses_comments.py
src/confclasses/: __init__.py  exceptions.py
tests/: test_confclasses.py
